--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "astronomia": "4.1.1",
     "dayjs": "1.11.11",
     "geodesy": "2.4.0",
+    "leaflet": "^1.9.4",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "suncalc": "1.9.0",
     "zod": "3.23.8"
   },
