--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.20",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
